--- a/.github/workflows/Collect.yaml
+++ b/.github/workflows/Collect.yaml
@@ -34,8 +34,7 @@ jobs:
 
       - name: Collect
         run: |
-          $ErrorActionPreference = "Stop"
-          Set-StrictMode -Version 2.0
+          $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
           try {
             $token = '${{ Secrets.OrgPAT }}'
             if (!$token) {
