--- a/Templates/Per Tenant Extension/.github/workflows/CreateApp.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateApp.yaml
@@ -57,6 +57,7 @@ jobs:
           eventId: "DO0092"
 
       - name: Read settings
+        id: ReadSettings
         uses: microsoft/AL-Go-Actions/ReadALGoSettings@main
         with:
           shell: powershell
@@ -71,8 +72,8 @@ jobs:
         with:
           shell: powershell
           parentTelemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
-          settingsJson: ${{ env.Settings }}
-          secrets: 'ghTokenWorkflow=${{ env.GHTOKENWORKFLOWSECRETNAME }}'
+          settingsJson: ${{ steps.ReadSettings.outputs.SettingsJson }}
+          secrets: 'ghTokenWorkflow'
 
       - name: CalculateToken
         id: CalculateToken
@@ -93,7 +94,7 @@ jobs:
           token: ${{ steps.CalculateToken.outputs.ghToken }}
           parentTelemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
           project: ${{ github.event.inputs.project }}
-          type: ${{ env.type }}
+          type: ${{ fromJson(steps.ReadSettings.outputs.SettingsJson).type }}
           name: ${{ github.event.inputs.name }}
           publisher: ${{ github.event.inputs.publisher }}
           idrange: ${{ github.event.inputs.idrange }}
