--- a/Templates/Per Tenant Extension/.github/workflows/_BuildALGoProject.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/_BuildALGoProject.yaml
@@ -84,6 +84,7 @@ jobs:
             path: '.dependencies'
 
         - name: Read settings
+          id: ReadSettings
           uses: microsoft/AL-Go-Actions/ReadALGoSettings@main
           with:
             shell: ${{ inputs.shell }}
@@ -97,7 +98,7 @@ jobs:
           with:
             shell: ${{ inputs.shell }}
             parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
-            settingsJson: ${{ env.Settings }}
+            settingsJson: ${{ steps.ReadSettings.outputs.SettingsJson }}
             secrets: ${{ inputs.secrets }}
 
         - name: Determine ArtifactUrl
@@ -107,11 +108,12 @@ jobs:
             shell: ${{ inputs.shell }}
             parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
             project: ${{ inputs.project }}
-            settingsJson: ${{ env.Settings }}
+            settingsJson: ${{ steps.ReadSettings.outputs.SettingsJson }}
             secretsJson: ${{ env.RepoSecrets }}
 
         - name: Cache Business Central Artifacts
-          if: env.useCompilerFolder == 'True' && inputs.useArtifactCache && steps.determineArtifactUrl.outputs.ArtifactCacheKey
+          # TODO useCompilerFolder probably comes from ReadSettings
+          if: fromJson(steps.ReadSettings.outputs.SettingsJson).useCompilerFolder == 'True' && inputs.useArtifactCache && steps.determineArtifactUrl.outputs.ArtifactCacheKey
           uses: actions/cache@v3
           with:
             path: .artifactcache
@@ -127,18 +129,18 @@ jobs:
             parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
             project: ${{ inputs.project }}
             projectDependenciesJson: ${{ inputs.projectDependenciesJson }}
-            settingsJson: ${{ env.Settings }}
+            settingsJson: ${{ steps.ReadSettings.outputs.SettingsJson }}
             secretsJson: ${{ env.RepoSecrets }}
             buildMode: ${{ inputs.buildMode }}
 
         - name: Sign
-          if: inputs.signArtifacts && env.doNotSignApps == 'False' && env.keyVaultCodesignCertificateName != ''
+          if: inputs.signArtifacts && fromJson(steps.ReadSettings.outputs.SettingsJson).doNotSignApps == 'False' && fromJson(steps.ReadSettings.outputs.SettingsJson).keyVaultCodesignCertificateName != ''
           id: sign
           uses: microsoft/AL-Go-Actions/Sign@main
           with:
             shell: ${{ needs.Initialization.outputs.githubRunnerShell }}
             azureCredentialsJson: ${{ secrets.AZURE_CREDENTIALS }}
-            settingsJson: ${{ env.Settings }}
+            settingsJson: ${{ steps.ReadSettings.outputs.SettingsJson }}
             pathToFiles: '${{ inputs.project }}/.buildartifacts/Apps/*.app'
             parentTelemetryScopeJson: ${{ needs.Initialization.outputs.telemetryScopeJson }}
 
@@ -148,7 +150,7 @@ jobs:
           if: success() || failure()
           with:
             shell: ${{ inputs.shell }}
-            settingsJson: ${{ env.Settings }}
+            settingsJson: ${{ steps.ReadSettings.outputs.SettingsJson }}
             project: ${{ inputs.project }}
             buildMode: ${{ inputs.buildMode }}
             branchName: ${{ github.ref_name }}
