--- a/Actions/CalculateArtifactNames/action.yaml
+++ b/Actions/CalculateArtifactNames/action.yaml
@@ -7,7 +7,7 @@ inputs:
     default: powershell
   settingsJson:
     description: Settings from repository in compressed Json format
-    required: true
+    required: false
   project:
     description: Name of the built project
     required: true
@@ -59,12 +59,11 @@ runs:
       shell: ${{ inputs.shell }}
       id: calculateartifactnames
       env:
-        _settingsJson: ${{ inputs.settingsJson }}
         _project: ${{ inputs.project }}
         _buildMode: ${{ inputs.buildMode }}
         _branchName: ${{ inputs.branchName }}
         _suffix: ${{ inputs.suffix }}
-      run: try { ${{ github.action_path }}/CalculateArtifactNames.ps1 -settingsJson $ENV:_settingsJson -project $ENV:_project -buildMode $ENV:_buildMode -branchName $ENV:_branchName -suffix $ENV:_suffix } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("*",'').Replace("*",' ')))"; exit 1 }
+      run: try { ${{ github.action_path }}/CalculateArtifactNames.ps1 -settingsJson $ENV:Settings -project $ENV:_project -buildMode $ENV:_buildMode -branchName $ENV:_branchName -suffix $ENV:_suffix } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("*",'').Replace("*",' ')))"; exit 1 }
 branding:
   icon: terminal
   color: blue
