--- a/Actions/Sign/action.yaml
+++ b/Actions/Sign/action.yaml
@@ -10,7 +10,7 @@ inputs:
     required: true
   settingsJson:
     description: Settings from repository in compressed Json format
-    required: true
+    required: false
   timestampService:
     description: The URI of the timestamp server
     required: false
@@ -33,7 +33,6 @@ runs:
       shell: ${{ inputs.shell }}
       env:
         _azureCredentialsJson: ${{ inputs.azureCredentialsJson }}
-        _settingsJson: ${{ inputs.settingsJson }}
         _timestampService: ${{ inputs.timestampService }}
         _digestAlgorithm: ${{ inputs.digestAlgorithm }}
         _pathToFiles: ${{ inputs.pathToFiles }}
@@ -41,13 +40,13 @@ runs:
       id: Sign
       run: | 
         try { 
-          ${{ github.action_path }}/Sign.ps1 -AzureCredentialsJson "$ENV:_azureCredentialsJson" `
-                                      -settingsJson "$ENV:_settingsJson" `
-                                      -TimestampService "$ENV:_timestampService" `
-                                      -TimestampDigest "$ENV:_digestAlgorithm" `
-                                      -FileDigest "$ENV:_digestAlgorithm" `
-                                      -PathToFiles "$ENV:_pathToFiles" `
-                                      -ParentTelemetryScopeJson "$ENV:_parentTelemetryScopeJson"
+          ${{ github.action_path }}/Sign.ps1 -AzureCredentialsJson $ENV:_azureCredentialsJson `
+                                      -settingsJson $ENV:Settings `
+                                      -TimestampService $ENV:_timestampService `
+                                      -TimestampDigest $ENV:_digestAlgorithm `
+                                      -FileDigest $ENV:_digestAlgorithm `
+                                      -PathToFiles $ENV:_pathToFiles `
+                                      -ParentTelemetryScopeJson $ENV:_parentTelemetryScopeJson
         } catch { 
           Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"; exit 1 
         }
