--- a/Actions/ReadSecrets/action.yaml
+++ b/Actions/ReadSecrets/action.yaml
@@ -8,7 +8,6 @@ inputs:
   settingsJson:
     description: Settings from template repository in compressed Json format
     required: false
-    default: '{"keyVaultName": ""}'
   secrets:
     description: Comma separated list of Secrets to get
     required: true
@@ -22,10 +21,9 @@ runs:
     - name: run
       shell: ${{ inputs.shell }}
       env:
-        _settingsJson: ${{ inputs.settingsJson }}
         _secrets: ${{ inputs.secrets }}
         _parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
-      run: try { ${{ github.action_path }}/ReadSecrets.ps1 -settingsJson $ENV:_settingsJson -secrets $ENV:_secrets -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"; exit 1 }
+      run: try { ${{ github.action_path }}/ReadSecrets.ps1 -settingsJson $ENV:Settings -secrets $ENV:_secrets -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"; exit 1 }
 branding:
   icon: terminal
   color: blue
