Do not transfer SettingsJson

--- a/Actions/CalculateArtifactNames/action.yaml
+++ b/Actions/CalculateArtifactNames/action.yaml
@@ -6,7 +6,7 @@ inputs:
     required: false
     default: powershell
   settingsJson:
-    description: Settings from repository in compressed Json format
+    description: 'OBSOLETE: Settings from repository in compressed Json format'
     required: false
   project:
     description: Name of the built project
@@ -59,11 +59,14 @@ runs:
       shell: ${{ inputs.shell }}
       id: calculateartifactnames
       env:
+        _settingsJson: ${{ inputs.settingsJson }}
         _project: ${{ inputs.project }}
         _buildMode: ${{ inputs.buildMode }}
         _branchName: ${{ inputs.branchName }}
         _suffix: ${{ inputs.suffix }}
-      run: try { ${{ github.action_path }}/CalculateArtifactNames.ps1 -settingsJson $ENV:Settings -project $ENV:_project -buildMode $ENV:_buildMode -branchName $ENV:_branchName -suffix $ENV:_suffix } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("*",'').Replace("*",' ')))"; exit 1 }
+      run: |
+        if ($ENV:_settingsJson) { Write-Host "::Warning::Running on old AL-Go for GitHub system files. Please Update ASAP." }
+        try { ${{ github.action_path }}/CalculateArtifactNames.ps1 -project $ENV:_project -buildMode $ENV:_buildMode -branchName $ENV:_branchName -suffix $ENV:_suffix } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("*",'').Replace("*",' ')))"; exit 1 }
 branding:
   icon: terminal
   color: blue
