'Collect changes from freddydk/*@updatetest'

--- a/Templates/Per Tenant Extension/.github/AL-Go-Settings.json
+++ b/Templates/Per Tenant Extension/.github/AL-Go-Settings.json
@@ -1,4 +1,5 @@
 {
   "type": "PTE",
-  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@main"
+  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@main",
+  "new setting": "test"
 }
