remove collected change

--- a/Templates/Per Tenant Extension/.github/AL-Go-Settings.json
+++ b/Templates/Per Tenant Extension/.github/AL-Go-Settings.json
@@ -1,5 +1,4 @@
 {
   "type": "PTE",
-  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@main",
-  "new setting": "test"
+  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@main"
 }
